test/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-inventory-system-service
spec:
  selector:
    app: core-inventory-system
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
