test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-inventory-system-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core-inventory-system-deployment
  template:
    metadata:
      labels:
        app: core-inventory-system-deployment
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io.scheme: 'http'
        prometheus.io/path: '/actuator/prometheus'
        prometheus.io/port: '8080'
    spec:
      containers:
      - name: core-inventory-system-deployment
        imagePullPolicy: Always
        image: ghcr.io/eed-web-application/core-inventory-system:sha-f9699cb
        envFrom:
        - configMapRef:
            name: env-config-map
        resources:
          limits:
            memory: 512Mi
            cpu: "250m"
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: gh-secret
